--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
         run: dotnet restore
 
       - name: Build project
-        run: dotnet publish -c Release -o /publish
+        run: dotnet publish -c Release -o ./publish
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: /publish/wwwroot
+          publish_dir: ./publish/wwwroot
