--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,32 @@
-name: Build and Deploy NomozVaqtlari Web App
+name: Deploy NomozVaqtlari Blazor WASM to GitHub Pages
 
 on:
   push:
     branches:
-      - master
+      - main  # yoki sizning asosiy branch'ingiz
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+    
+    - name: Set up .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '9.0'  # Sizning .NET versiyangiz
+    
+    - name: Restore dependencies
+      run: dotnet restore NomozVaqtlari/NomozVaqtlari.csproj
+    
+    - name: Build NomozVaqtlari Blazor WebAssembly project
+      run: dotnet publish NomozVaqtlari/NomozVaqtlari.csproj --configuration Release --output ./build
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '9.0' # Loyihangizning .NET versiyasini kiriting
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build project
-        run: dotnet publish -c Release -o ./publish
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./publish/wwwroot
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        branch: gh-pages
+        folder: ./build/wwwroot  # To'g'ri papkaga yo'naltirishni tekshiring (index.html shu yerda bo'lishi kerak)
+        token: ${{ secrets.GITHUB_TOKEN }}
