--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,27 @@
-name: Deploy NomozVaqtlari Blazor WASM to GitHub Pages
+name: Deploy NomozVaqtlar to GitHub Pages
 
 on:
   push:
     branches:
-      - master  # yoki sizning asosiy branch'ingiz
+      - master  # Change to your default branch if it's not 'main'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '9.0'  # Sizning .NET versiyangiz
-    
-    - name: Restore dependencies
-      run: dotnet restore NomozVaqtlari/NomozVaqtlari.csproj
-    
-    - name: Build NomozVaqtlari Blazor WebAssembly project
-      run: dotnet publish NomozVaqtlari/NomozVaqtlari.csproj --configuration Release --output ./build
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        branch: gh-pages
-        folder: ./build/wwwroot  # To'g'ri papkaga yo'naltirishni tekshiring (index.html shu yerda bo'lishi kerak)
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '9.0'  # Change to your target .NET version
+
+      - name: Publish Blazor WebAssembly app
+        run: dotnet publish -c Release -o ./publish
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./publish/wwwroot
